--- a/index.html
+++ b/index.html
@@ -15,23 +15,29 @@
   </head>
   <body>
     <div class="container">
-      <div class="grid">
-        <div class="img">
-          <img src="images/bg-pattern-card.svg" alt="" class="img-bac" />
-
-          <img src="images/image-victor.jpg" alt="" class="img-pro" />
-        </div>
+      <div class="wrapper">
+        <img src="images/bg-pattern-card.svg" alt="" />
         <div class="card-content">
-          <div class="name">
-            <h3 class="card-naem">Victor Crest</h3>
-            <h4 class="card-num">26</h4>
+          <img src="images/image-victor.jpg" alt="" />
+          <h2 class="card-naem">Victor Crest <span>26</span></h2>
+          <p>London</p>
+          <div class="footer">
+            <div>
+              <p class="num">80K</p>
+              <p>Followers</p>
+            </div>
+            <div>
+              <p class="num">803K</p>
+              <p>Likes</p>
+            </div>
+            <div>
+              <p class="num">1.4K</p>
+              <p>Photos</p>
+            </div>
           </div>
-          <p class="card-city">London</p>
         </div>
       </div>
     </div>
-
-    <!-- 80K Followers 803K Likes 1.4K Photos -->
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
